--- a/data.yaml
+++ b/data.yaml
@@ -20,4 +20,4 @@ pages:
     title: Scrollytelling Practice - Over 10,000 complaints are lodged against the NYPD each year. Less than 5% end in punishment.
     template: html_bootstrap
     slug: third-project
-    filepath: sticky-side.html
+    filepath: content/sticky-side.html
